welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: value update is not a member of Boolean
if(estFaceMur()=true){
   ^Program:2: error: not found: value aFaireSiLaConditionEstVraie
	aFaireSiLaConditionEstVraie(recule());
        ^Program:4: error: not found: value aFaireSiElleEstFausse
	aFaireSiElleEstFausse(avance());}
        ^